--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "preact": "^10.27.0"
+    "preact": "^10.27.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.10.2",
